--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,30 +1,54 @@
+app:
+  api-prefix: /api
+
 spring:
   application:
-    name: api-gateway  # Tên service cho Eureka register
+    name: api-gateway
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
-      routes:
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/api/users/**
-          filters:
-            - StripPrefix=2
-        - id: course-service
-          uri: lb://course-service
-          predicates:
-            - Path=/api/courses/**
-          filters:
-            - StripPrefix=2
-      globalcors:
-        corsConfigurations:
-          '[/**]':
-            allowedOrigins: "*"
-            allowedMethods: "*"
-            allowedHeaders: "*"
+      server:
+        webflux:
+          routes:
+            - id: user-service
+              uri: http://localhost:8081
+              predicates:
+                - Path=${app.api-prefix}/user-service/users/**
+              filters:
+                - StripPrefix=1
+
+            - id: user-service-graphql
+              uri: http://localhost:8081
+              predicates:
+                - Path=${app.api-prefix}/user-service/graphql
+              filters:
+                - StripPrefix=1
+            - id: course-service-rest
+              uri: http://localhost:8082
+              predicates:
+                - Path=${app.api-prefix}/course-service/courses/**
+              filters:
+                - StripPrefix=1
+
+            - id: course-service-graphql
+              uri: http://localhost:8082
+              predicates:
+                - Path=${app.api-prefix}/course-service/graphql
+              filters:
+                - StripPrefix=1
+
+
+            - id: content-service
+              uri: http://localhost:8084
+              predicates:
+                - Path=${app.api-prefix}/content-service/contents/**
+              filters:
+                - StripPrefix=1
+            - id: post_service
+              uri: http://localhost:8083
+              predicates:
+                - Path=${app.api-prefix}/post/**
+              filters:
+                - StripPrefix=2
 
 eureka:
   client:
@@ -36,13 +60,20 @@ eureka:
     prefer-ip-address: true
 
 server:
-  port: 8080
+  port: 8888
 
 management:
   endpoints:
     web:
       exposure:
-        include: gateway, health, info, metrics  # Thêm metrics để monitor routes
-  endpoint:
-    health:
-      show-details: always  # Chi tiết health check
+        include: gateway, health, info, metrics
+    endpoint:
+      health:
+        show-details: always
+
+logging:
+  level:
+    org.springframework: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.cloud.gateway: TRACE  # TRACE để log full forwarding
+    com.learning.api_gateway.config.AuthenticationFilter: DEBUG
