--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@stomp/stompjs": "^7.2.1",
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "cloudinary-core": "^2.14.0",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
@@ -23,6 +25,7 @@
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@types/node": "^24.8.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
